chore: fix animation shift

--- a/styles/start.css
+++ b/styles/start.css
@@ -13,6 +13,10 @@
     transition: 1s ease;
 }
 
+.text-content {
+    transition: 1s ease;
+}
+
 .start-title {
     font-family: 'Segoe UI', Tahoma, sans-serif;
     font-size: 1.5em;
